force-app/main/default/objects/ucinn_ascendv2__Source_Related_List_Matching_Field__c/ucinn_ascendv2__Source_Related_List_Matching_Field__c.object-meta.xml
<CustomObject>
    <description>Used for creating matching fields based on the related list object from source object to compare to the related list object from the target object.</description>
    <label>Source Related List Matching Field</label>
    <nameField>
        <label>Source Related List Matching Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Related List Matching Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>