force-app/main/default/objects/ucinn_ascendv2__Source_Related_List_Matching_Field__c/fields/ucinn_ascendv2__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Rule__c</fullName>
    <description>The matching rule this source related list object matching field belongs to.</description>
    <label>Matching Rule</label>
    <referenceTo>ucinn_ascendv2__Matching_Rule__c</referenceTo>
    <relationshipLabel>Source Related List Matching Fields</relationshipLabel>
    <relationshipName>Source_RL_Matching_Fields_Matching_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>