force-app/main/default/objects/ucinn_ascendv2__Source_Related_List_Matching_Field__c/fields/ucinn_ascendv2__Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Score__c</fullName>
    <description>The matching score for this matching field.</description>
    <label>Matching Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>