force-app/main/default/objects/ucinn_ascendv2__Source_Related_List_Matching_Field__c/fields/ucinn_ascendv2__Target_Related_List_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Related_List_Object_Field__c</fullName>
    <label>Target Related List Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>